--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ AZURE_OPENAI_KEY=your_api_key
 AZURE_OPENAI_ENDPOINT=your_azure_endpoint
 PERSONAL_TOKEN=your_github_personal_token
 WEBHOOK_URL=your_webhook_url
+AZURE_OPENAI_API_VERSION=
+AZURE_OPENAI_DEPLOYMENT=
