增加prompts.toml配置文件

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ PERSONAL_TOKEN=your_github_personal_token
 WEBHOOK_URL=your_webhook_url
 AZURE_OPENAI_API_VERSION=
 AZURE_OPENAI_DEPLOYMENT=
+ROOT_COMMITS_URL=https://github.com/MicrosoftDocs/azure-docs/commits/main/articles/ai-services/openai/
+LANGUAGE=Chinese
