--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ azure_storage==0.37.0
 beautifulsoup4==4.12.2
 loguru==0.7.2
 openai==0.28.1
-PyQt5==5.15.10
-PyQt5_sip==12.13.0
+# PyQt5==5.15.10
+# PyQt5_sip==12.13.0
 python-dotenv==1.0.0
 Requests==2.31.0
 toml==0.10.2
