--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-AZURE_OPENAI_KEY=your_api_key
-AZURE_OPENAI_ENDPOINT=your_azure_endpoint
 PERSONAL_TOKEN=your_github_personal_token
-WEBHOOK_URL=your_webhook_url
-AZURE_OPENAI_API_VERSION=
-AZURE_OPENAI_DEPLOYMENT=
-ROOT_COMMITS_URL=https://github.com/MicrosoftDocs/azure-docs/commits/main/articles/ai-services/openai/
-LANGUAGE=Chinese
+AZURE_OPENAI_KEY=abcd
+AZURE_OPENAI_ENDPOINT=https://abcd.openai.azure.com/
+AZURE_OPENAI_API_VERSION=2023-07-01-preview
+AZURE_OPENAI_DEPLOYMENT=gpt-4-32k-0613-deployment-name
+# optional below
+AZURE_COSMOSDB_DATABASE = docupdateDB
+AZURE_COSMOSDB_ACCOUNT =jz-cosmosdb
+AZURE_COSMOSDB_CONVERSATIONS_CONTAINER = docupdateContainer
+AZURE_COSMOSDB_ACCOUNT_KEY = 'vS2v******w3v'
