--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ openai==0.28.1
 # PyQt5_sip==12.13.0
 python-dotenv==1.0.0
 Requests==2.31.0
+tenacity==8.2.3
 toml==0.10.2
 azure-cosmos==4.5.1
 azure.identity==1.15.0
-
