--- a/target_config.json.example
+++ b/target_config.json.example
@@ -3,18 +3,21 @@
         "topic_name": "OpenAI zehua Chinese",
         "root_commits_url": "https://github.com/MicrosoftDocs/azure-docs/commits/main/articles/ai-services/openai/",
         "language": "Chinese",
-        "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***"
+        "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***",
+        "show_topic_in_title": "True"
     },
     {
         "topic_name": "Azure Machine Learning zehua Chinese",
         "root_commits_url": "https://github.com/MicrosoftDocs/azure-docs/commits/main/articles/machine-learning/",
         "language": "Chinese",
         "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***"
+        "show_topic_in_title": "False"
     },
     {
         "topic_name": "OpenAI zehua English",
         "root_commits_url": "https://github.com/MicrosoftDocs/azure-docs/commits/main/articles/ai-services/openai/",
         "language": "English",
-        "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***"
+        "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***",
+        "show_topic_in_title": "False"
     }
 ]
