--- a/target_config.json.example
+++ b/target_config.json.example
@@ -4,20 +4,23 @@
         "root_commits_url": "https://github.com/MicrosoftDocs/azure-docs/commits/main/articles/ai-services/openai/",
         "language": "Chinese",
         "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***",
-        "show_topic_in_title": "True"
+        "show_topic_in_title": "True",
+        "push_summary": "True"
     },
     {
         "topic_name": "Azure Machine Learning zehua Chinese",
         "root_commits_url": "https://github.com/MicrosoftDocs/azure-docs/commits/main/articles/machine-learning/",
         "language": "Chinese",
         "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***"
-        "show_topic_in_title": "False"
+        "show_topic_in_title": "False",
+        "push_summary": "False"
     },
     {
         "topic_name": "OpenAI zehua English",
         "root_commits_url": "https://github.com/MicrosoftDocs/azure-docs/commits/main/articles/ai-services/openai/",
         "language": "English",
         "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***",
-        "show_topic_in_title": "False"
+        "show_topic_in_title": "False",
+        "push_summary": "False"
     }
 ]
