--- a/target_config.json.example
+++ b/target_config.json.example
@@ -4,8 +4,8 @@
         "root_commits_url": "https://github.com/MicrosoftDocs/azure-docs/commits/main/articles/ai-services/openai/",
         "language": "Chinese",
         "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***",
-        "show_topic_in_title": "True",
-        "push_summary": "True"
+        "show_topic_in_title": "False",
+        "push_summary": "False"
     },
     {
         "topic_name": "Azure Machine Learning zehua Chinese",
