--- a/target_config.json.example
+++ b/target_config.json.example
@@ -1,26 +1,30 @@
 [
-    {
-        "topic_name": "OpenAI zehua Chinese",
-        "root_commits_url": "https://api.github.com/repos/MicrosoftDocs/azure-docs/commits?path=articles/ai-services/openai/",
-        "language": "Chinese",
-        "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***",
-        "show_topic_in_title": "False",
-        "push_summary": "False"
-    },
-    {
-        "topic_name": "Azure Machine Learning zehua Chinese",
-        "root_commits_url": "https://api.github.com/repos/MicrosoftDocs/azure-docs/commits?path=articles/machine-learning/",
-        "language": "Chinese",
-        "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***"
-        "show_topic_in_title": "False",
-        "push_summary": "False"
-    },
-    {
-        "topic_name": "OpenAI zehua English",
-        "root_commits_url": "https://api.github.com/repos/MicrosoftDocs/azure-docs/commits?path=articles/ai-services/openai/",
-        "language": "English",
-        "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***",
-        "show_topic_in_title": "False",
-        "push_summary": "False"
-    }
+  {
+    "topic_name": "OpenAI Chinese",
+    "root_commits_url": "https://api.github.com/repos/MicrosoftDocs/azure-docs/commits?path=articles/ai-services/openai/",
+    "language": "Chinese",
+    "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***"
+  },
+  {
+    "topic_name": "AAD",
+    "root_commits_url": "https://api.github.com/repos/MicrosoftDocs/entra-docs/commits?path=docs",
+    "language": "Chinese",
+    "url_mapping": { "docs": "https://learn.microsoft.com/en-us/entra" },
+    "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***"
+  },
+  {
+    "topic_name": "Fabric",
+    "root_commits_url": "https://api.github.com/repos/MicrosoftDocs/fabric-docs/commits?path=docs",
+    "language": "Chinese",
+    "url_mapping": { "docs": "https://learn.microsoft.com/en-us/fabric" },
+    "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***"
+  },
+  {
+    "topic_name": "OpenAI zehua English",
+    "root_commits_url": "https://api.github.com/repos/MicrosoftDocs/azure-docs/commits?path=articles/ai-services/openai/",
+    "language": "English",
+    "teams_webhook_url": "https://microsoft.webhook.office.com/webhookb2/***",
+    "show_topic_in_title": "False",
+    "push_summary": "False"
+  }
 ]
