--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ AZURE_OPENAI_ENDPOINT=https://abcd.openai.azure.com/
 AZURE_OPENAI_API_VERSION=2023-07-01-preview
 AZURE_OPENAI_DEPLOYMENT=gpt-4-32k-0613-deployment-name
 AZURE_COSMOSDB_DATABASE = docupdateDB
-AZURE_COSMOSDB_ACCOUNT =jz-cosmosdb
+AZURE_COSMOSDB_ACCOUNT =jz-fdpo-cosmosdb
 AZURE_COSMOSDB_CONVERSATIONS_CONTAINER = docupdateContainer
 AZURE_COSMOSDB_ACCOUNT_KEY = 'vS2v******w3v'
