--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,9 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
