--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@azure/cosmos": "^4.2.0",
     "@azure/identity": "^4.5.0",
     "@radix-ui/react-select": "^2.1.3",
+    "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "doc-update-notification-web": "file:",
