--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "^9.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
