--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "doc-update-notification-web": "file:",
     "lucide-react": "^0.468.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
