--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@azure/identity": "^4.5.0",
     "@radix-ui/react-select": "^2.1.3",
     "@tailwindcss/typography": "^0.5.15",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "doc-update-notification-web": "file:",
@@ -20,6 +21,7 @@
     "next": "14.2.3",
     "next-auth": "^4.24.11",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "rehype-raw": "^7.0.0",
