--- a/web/.env.example
+++ b/web/.env.example
@@ -2,3 +2,8 @@ AZURE_COSMOSDB_DATABASE=docupdateDB
 AZURE_COSMOSDB_ACCOUNT=your_cosmos_account
 AZURE_COSMOSDB_CONVERSATIONS_CONTAINER=docupdateContainer
 AZURE_COSMOSDB_ACCOUNT_KEY=your_cosmos_key
+
+# 日志配置
+LOG_LEVEL=info
+SMTP_USER=joeyzenghuan@outlook.com
+SMTP_PASS=your_outlook_password
