--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,9 @@
     "@azure/identity": "^4.5.0",
     "@radix-ui/react-select": "^2.1.3",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/axios": "^0.9.36",
+    "@types/nodemailer": "^6.4.17",
+    "axios": "^1.8.2",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -20,6 +23,7 @@
     "lucide-react": "^0.468.0",
     "next": "14.2.3",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
@@ -27,7 +31,9 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
