web: 1.设置usage管理员暗号 2. 增加time range, excludedUser 3.增加花里胡哨的特效

--- a/web/.env.example
+++ b/web/.env.example
@@ -7,3 +7,6 @@ AZURE_COSMOSDB_ACCOUNT_KEY=your_cosmos_key
 LOG_LEVEL=info
 SMTP_USER=joeyzenghuan@outlook.com
 SMTP_PASS=your_outlook_password
+
+# 管理员密码配置
+ADMIN_PASSWORD=your_admin_password
